# chat

./: .gitignore  README.md
client/: package-lock.json  package.json  vite.config.js
client/src/: main.js
client/src/components/: LoginPage.vue  LogoutPage.vue  ProfileBadge.vue  ProfileThumbnail.vue  RegisterPage.vue
client/src/components/main-page/: Conversation.vue  ConversationList.vue  ConversationPreview.vue  ConversationThumbnail.vue  MainPage.vue  SenderChunkedMessage.vue
server/: .gitignore  Cargo.toml  database.sqbpro
server/.cargo/: config.toml
server/resources/images/profiles/: check_uniqueness.py
server/src/: main.rs
server/src/api/: conversation.rs  map_internal_error.rs  message.rs  mod.rs
server/src/api/conversation/: create_new_conversation.rs  get_conversation.rs  get_conversation_messages.rs  get_joined_conversations.rs  mod.rs  send_conversation_message.rs
server/src/api/user/: get_all_users.rs  get_login_info.rs  get_profile_picture.rs  login.rs  logout.rs  mod.rs  register.rs  user.rs
server/src/websocket/: mod.rs  server.rs  session.rs
