[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-multipart = "0.6.1"
actix-session = { version = "0.8.0", features = ["redis-actor-session"] }
actix-web = { version = "4.4.0", features = ["rustls", "rustls-0_21"] }
actix-web-actors = "4.2.0"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
futures = "0.3.29"
log = "0.4.20"
mime = "0.3.17"
rand = "0.8.5"
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio", "chrono"] }
uuid = { version = "1.5.0", features = ["v4"] }
